<?xml version="1.0"?>
<package format="2">
  <name>laneatt</name>
  <version>0.0.0</version>
  <description>The lane_detection package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>loopx_lane_detection_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_export_depend>loopx_lane_detection_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <exec_depend>loopx_lane_detection_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/laneatt.xml" />
  </export>

</package>
